# pragya-opencode-bridge

./: .gitignore  fuche-tts.ps1  greedy-scan.ps1  package-lock.json  package.json  vite.config.js  watch-screenshots.ps1
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/bridge/: cascade.rs  health.rs  mod.rs  ocr.rs  opencode.rs  rag.rs  shell.rs  termux.rs  tts.rs  wsl.rs
tests/: auto-test.cjs  pragya-test.spec.js
