[package]
name = "pragya"
version = "0.1.0"
edition = "2021"

[package.metadata]

[lib]
name = "pragya_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
image = { version = "0.25", default-features = false, features = ["png"] }
